--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ cache:
   - tmp/cache/assets/test
 node_js:
 - '0.10'
+before_install:
+- if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 before_script:
+- npm install
 - bundle exec rake db:create db:migrate RAILS_ENV=test
