--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: telephone_appointment_planner_production
-  username: telephone_appointment_planner
-  password: <%= ENV['TELEPHONE_APPOINTMENT_PLANNER_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
