Use the latest rubygems in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 before_script:
 - npm install
+- gem update --system
 - bundle exec rake db:create db:migrate RAILS_ENV=test
 notifications:
   slack:
