--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,9 @@ before_script:
 - wget https://yarnpkg.com/latest.tar.gz
 - mkdir -p $HOME/yarn-bin
 - tar zxvf latest.tar.gz -C $HOME/yarn-bin > /dev/null 2>&1
-- $HOME/yarn-bin/dist/bin/yarn
+- export PATH="$PATH:$HOME/yarn-bin/dist/bin"
+# - $HOME/yarn-bin/dist/bin/yarn
+- yarn
 - gem update --system
 - bundle exec rake db:create db:migrate RAILS_ENV=test
 notifications:
