--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
 - wget https://yarnpkg.com/latest.tar.gz
 - mkdir -p $HOME/yarn-bin
 - tar zxvf latest.tar.gz -C $HOME/yarn-bin > /dev/null 2>&1
-- ln -s $HOME/yarn-bin/dist/bin/yarn /usr/local/bin/yarn
+- sudo ln -s $HOME/yarn-bin/dist/bin/yarn /usr/local/bin/yarn
 # - export PATH="$PATH:$HOME/yarn-bin/dist/bin"
 # - $HOME/yarn-bin/dist/bin/yarn
 - yarn
