--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ cache:
   directories:
   - tmp/cache/assets/test
   - $HOME/.nvm
-  - $HOME/.yarn-cache
-  - $HOME/yarn-bin
+  # - $HOME/.yarn-cache
+  # - $HOME/yarn-bin
 node_js:
 - '0.10'
 before_install:
