Improving file structure of scss files and adding scss-lint
- moved each distinct 'component' into it's own scss file
- fixed linting issues
- added scss-lint to rake

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,10 @@ Metrics/LineLength:
 Rails:
   Enabled: true
 
+Style/FileName:
+  Exclude:
+    - bin/scss-lint
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
