Ensure we're using Postgres 9.4 on CI
We need this for JSONB support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 sudo: false
 language: ruby
+addons:
+  postgresql: '9.4'
 services:
 - redis-server
+- postgresql
 cache:
   bundler: true
   directories:
