Upgrade es6 lint and enable certain rules
- realised that the root javascripts directory wasn't
  being linted
- enabled some extra rules based on current style of
  es6 files

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,13 @@
     "browser": true,
     "jquery": true
   },
-  "globals": {
-    PWPG: true
-  },
   "rules": {
-    "strict": 1
+    "strict": ["error", "global"],
+    "no-var": "error",
+    "one-var": ["error", "always"],
+    "no-template-curly-in-string": "error",
+    "array-callback-return": "error",
+    "prefer-template": "error",
+    "template-curly-spacing": ["error", "never"]
   }
 }
