--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "dependencies": {
   },
   "devDependencies": {
-    "babel-core": "^6.7.0",
-    "babel-eslint": "^5.0.0",
-    "babel-preset-es2015": "^6.6.0",
-    "eslint": "^1.10.3"
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-preset-es2015": "^6.18.0",
+    "eslint": "^3.9.1"
   },
   "scripts": {
     "js": "npm run eslint",
-    "eslint": "eslint app/assets/javascripts/**/*.es6"
+    "eslint": "eslint app/assets/javascripts/*.es6 app/assets/javascripts/**/*.es6"
   }
 }
