--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,3 +28,7 @@ Style/FrozenStringLiteralComment:
 Metrics/MethodLength:
   Exclude:
     - 'spec/requests/*'
+
+Metrics/AbcSize:
+  Exclude:
+    - 'spec/features/*'
