--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,7 +27,7 @@ Style/FrozenStringLiteralComment:
 
 Metrics/MethodLength:
   Exclude:
-    - 'spec/requests/*'
+    - 'spec/features/*'
 
 Metrics/AbcSize:
   Exclude:
