Adding no-params-reassign option to eslint
- altered eslint command line to correctly look for any
  .es6 files within the javascripts directory

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   },
   "scripts": {
     "js": "npm run eslint",
-    "eslint": "eslint app/assets/javascripts/*.es6 app/assets/javascripts/**/*.es6"
+    "eslint": "eslint --ext .es6 app/assets/javascripts"
   }
 }
