--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "no-template-curly-in-string": "error",
     "array-callback-return": "error",
     "prefer-template": "error",
-    "template-curly-spacing": ["error", "never"]
+    "template-curly-spacing": ["error", "never"],
+    "no-param-reassign": "error"
   }
 }
