--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 cache:
   bundler: true
   directories:
+  - $HOME/.phantomjs
   - tmp/cache/assets/test
   - tmp/cache/assets/sprockets
 before_script:
