--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
     "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.9.1"
+    "eslint": "3.9.1"
   },
   "scripts": {
     "js": "npm run eslint",
