--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,16 @@ cache:
   bundler: true
   directories:
   - $HOME/.phantomjs
+  - ".downloads"
   - tmp/cache/assets/test
   - tmp/cache/assets/sprockets
+env:
+  global:
+  - PATH=$PWD/bin:$PATH
 before_script:
+- "[ -d .downloads ] || mkdir .downloads"
+- "(cd .downloads; [ -d prince-9.0r5-linux-amd64-static ] || curl -s https://www.princexml.com/download/prince-9.0r5-linux-amd64-static.tar.gz | tar xzf -)"
+- echo $PWD | ./.downloads/prince-9.0r5-linux-amd64-static/install.sh
 - nvm install 7
 - nvm use 7
 - npm install
