--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,11 @@ before_script:
 - "[ -d .downloads ] || mkdir .downloads"
 - "(cd .downloads; [ -d prince-9.0r5-linux-amd64-static ] || curl -s https://www.princexml.com/download/prince-9.0r5-linux-amd64-static.tar.gz | tar xzf -)"
 - echo $PWD | ./.downloads/prince-9.0r5-linux-amd64-static/install.sh
-- nvm install 14
-- nvm use 14
+- nvm install 16
+- nvm use 16
 - npm install
+- npx @puppeteer/browsers install chromedriver@116.0.5845.96 --path $PWD/bin
+- export PATH=$PWD/bin/chromedriver/linux-116.0.5845.96/chromedriver-linux64:$PATH
 - gem install bundler
 - bundle exec rails assets:precompile RAILS_ENV=test
 - bundle exec rails db:create db:migrate RAILS_ENV=test
