--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "telephone_appointment_planner",
-  "dependencies": {
+  "engines": {
+    "node": "16.20.2"
   },
+  "dependencies": {},
   "devDependencies": {
+    "@puppeteer/browsers": "^1.7.0",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
     "babel-preset-es2015": "^6.18.0",
