--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -68,3 +68,17 @@ Layout/ClosingHeredocIndentation:
   Exclude:
     - 'app/forms/appointment_report.rb'
     - 'app/models/bookable_slot.rb'
+
+Layout/HashAlignment:
+  Exclude:
+    - 'app/helpers/user_helper.rb'
+    - 'app/jobs/sms_cancellation_failure_job.rb'
+    - 'app/lib/where_you_heard.rb'
+    - 'app/presenters/appointment_csv_presenter.rb'
+    - 'lib/tasks/export.rake'
+    - 'spec/features/resource_manager_manages_holidays_spec.rb'
+    - 'spec/forms/drop_form_spec.rb'
+    - 'spec/mailers/appointment_mailer_spec.rb'
+    - 'spec/models/bookable_slot_spec.rb'
+    - 'spec/requests/appointments_api_spec.rb'
+    - 'spec/requests/nudge_appointments_api_spec.rb'
