--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -108,3 +108,7 @@ Rails/ApplicationController:
     - 'app/controllers/api/v1/bookable_slots_controller.rb'
     - 'app/controllers/mail_gun/drops_controller.rb'
     - 'app/controllers/sms_cancellations_controller.rb'
+
+Naming/MemoizedInstanceVariableName:
+  Exclude:
+    - 'spec/features/notifications_spec.rb'
