--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,17 +9,17 @@ AllCops:
     - 'vendor/**/*'
   TargetRubyVersion: 3.2
 
-Documentation:
+Style/Documentation:
   Enabled: false
 
 Lint/SuppressedException:
   Exclude:
     - Rakefile
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 
-Style/FileName:
+Naming/FileName:
   Exclude:
     - bin/scss-lint
 
