--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {},
   "devDependencies": {
     "@puppeteer/browsers": "^1.7.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "7.2.3",
     "babel-preset-es2015": "^6.18.0",
-    "eslint": "8.53.0"
+    "eslint": "6.6.0"
   },
   "scripts": {
     "js": "npm run eslint",
