--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@puppeteer/browsers": "^1.7.0",
+    "@puppeteer/browsers": "2.2.0",
     "babel-core": "6.26.3",
     "babel-eslint": "7.2.3",
     "babel-preset-es2015": "^6.18.0",
