--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ before_script:
 - nvm install 16
 - nvm use 16
 - npm install
-- npx @puppeteer/browsers install chromedriver@123.0.6312.58 --path $PWD/bin
-- export PATH=$PWD/bin/chromedriver/linux-123.0.6312.58/chromedriver-linux64:$PATH
+- "npx @puppeteer/browsers install chromedriver@${CHROMEDRIVER} --path $PWD/bin"
+- "export PATH=$PWD/bin/chromedriver/linux-${CHROMEDRIVER}/chromedriver-linux64:$PATH"
 - gem install bundler
 - bundle exec rails assets:precompile RAILS_ENV=test
 - bundle exec rails db:create db:migrate RAILS_ENV=test
