Add the 'online' label to rebooks
When the rebooked from appointment is marked as cancelled by customer
online we ought to display the 'online' label in the heading.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,10 @@ Metrics/AbcSize:
     - 'spec/features/*'
     - 'spec/requests/*'
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/helpers/*'
+
 Style/ExpandPathArguments:
   Exclude:
     - 'spec/rails_helper.rb'
