--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,6 +40,7 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - 'spec/helpers/*'
+    - 'spec/lib/casebook/api_spec.rb'
 
 Style/ExpandPathArguments:
   Exclude:
